test/parsing/precedence/new-mgmt-q-bang.chpl

var x = new unmanaged RootClass()?!;
compilerError(x.type:string);
